<!--
  ~ Copyright 2019 Simpalm. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Dialog Helper</string>
    <string name="Ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="ok_dialog_single_button">Ok Dialog (Single button)</string>
    <string name="ok_cancel_dialog_two_button">Ok-Cancel Dialog(Two Button)</string>
    <string name="list_dialog">List Dialog</string>
    <string name="time_dialog">Time Dialog</string>
    <string name="date_dialog">Date Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
</resources>
