<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Simpalm. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".dialog.MainActivity">

    <Button
            android:id="@+id/dialogBtn"
            android:text="@string/ok_dialog_single_button"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/okCancelBtn"
            android:layout_marginBottom="10dp"
            android:text="@string/ok_cancel_dialog_two_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/customDialogBtn"
            android:text="@string/custom_dialog"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/dateDailogBtn"
            android:text="@string/date_dialog"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/timeDailogBtn"
            android:text="@string/time_dialog"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/listDialogBtn"
            android:text="@string/list_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>